<resources>
    <string name="app_name">Chiaki</string>
    <string name="title_main">Chiaki 千秋</string>
    <string name="title_settings">Settings</string>
    <string name="alert_message_standby_wakeup">The Console is currently in standby mode. Do you want to send a Wakeup packet instead of trying to connect immediately?</string>
    <string name="alert_message_session_quit">Session has quit: %s</string>
    <string name="alert_message_session_create_error">Failed to create Session: %s</string>
    <string name="alert_message_login_pin_request">Login PIN:</string>
    <string name="alert_message_login_pin_request_incorrect">Entered PIN was incorrect!\nLogin PIN:</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_wakeup">Wakeup</string>
    <string name="action_connect_immediately">Connect</string>
    <string name="action_connect_cancel_connect">Cancel</string>
    <string name="action_quit_session">Quit</string>
    <string name="action_login_pin_connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_discover">Discover Consoles Automatically</string>
    <string name="display_host_host">Address: %s</string>
    <string name="display_host_id_unregistered">ID: %s</string>
    <string name="display_host_id_registered">ID: %s (registered)</string>
    <string name="display_host_app_title_id">App: %s\nTitle ID: %s</string>
    <string name="action_register">Register Console</string>
    <string name="action_add_manual">Add Console Manually</string>
    <string name="regist_pin_instructions_ps4_before">On the PS4, navigate to</string>
    <string name="regist_pin_instructions_ps4_navigation">Settings →\nRemote Play Connection Settings →\nAdd Device</string>
    <string name="regist_pin_instructions_ps5_before">On the PS5, navigate to</string>
    <string name="regist_pin_instructions_ps5_navigation">Settings →\nSystem → Remote Play →\nLink Device</string>
    <string name="regist_pin_instructions_after">to obtain the PIN</string>
    <string name="title_regist">Register Console</string>
    <string name="hint_regist_host">Host</string>
    <string name="regist_broadcast">Broadcast</string>
    <string name="regist_option_ps4_lt_7">PS4 &lt; 7.0</string>
    <string name="regist_option_ps4_ge_7">PS4 ≥ 7.0, &lt; 8</string>
    <string name="regist_option_ps4_ge_8">PS4 ≥ 8.0</string>
    <string name="regist_option_ps5">PS5</string>
    <string name="regist_psn_account_id_help">About obtaining your Account ID, see</string>
    <string name="regist_psn_account_id_help_url">https://git.sr.ht/~thestr4ng3r/chiaki/tree/master/item/README.md#obtaining-your-psn-accountid</string>
    <string name="hint_regist_psn_online_id">PSN Online ID (username, case-sensitive)</string>
    <string name="hint_regist_psn_account_id">PSN Account ID (8 bytes, base64)</string>
    <string name="hint_regist_pin">PIN</string>
    <string name="action_regist">Register</string>
    <string name="entered_host_invalid">Please enter a valid host name</string>
    <string name="regist_psn_online_id_invalid">Please enter a valid PSN ID</string>
    <string name="regist_psn_account_id_invalid">Please enter a valid 8-byte Account ID in Base64</string>
    <string name="regist_pin_invalid">Please enter a valid %d-digit PIN</string>
    <string name="action_share_log">Share Log</string>
    <string name="action_export_settings">Export Settings</string>
    <string name="regist_info_success">Regist successful.</string>
    <string name="regist_info_failed">Regist failed.</string>
    <string name="alert_regist_duplicate">The console with MAC %s has already been registered. Should the previous record be overwritten?</string>
    <string name="action_regist_overwrite">Overwrite</string>
    <string name="action_regist_discard">Cancel</string>
    <string name="action_import_import">Import</string>
    <string name="action_import_cancel">Cancel</string>
    <string name="alert_title_import">Import</string>
    <string name="alert_message_import">Registered Hosts: %s\n\nManual Hosts: %s</string>
    <string name="alert_message_import_failed">Failed to import settings from file:\n%s</string>
    <string name="action_import_failed_ack">Dismiss</string>
    <string name="title_edit_manual">Manual Console Entry</string>
    <string name="action_add_manual_save">Save</string>
    <string name="hint_add_manual_regist_host">Registered Console</string>
    <string name="add_manual_regist_on_connect">Register on first Connection</string>
    <string name="preferences_category_title_general">General</string>
    <string name="preferences_category_title_stream">Stream</string>
    <string name="preferences_category_title_export">Export</string>
    <string name="preferences_registered_hosts_title">Registered Consoles</string>
    <string name="preferences_logs_title">Session Logs</string>
    <string name="preferences_logs_summary">Collected log files from previous sessions for debugging</string>
    <string name="preferences_export_settings_title">Export Settings</string>
    <string name="preferences_export_settings_summary">Warning: These resulting file can contain your secret Remote Play keys! Do not share them.</string>
    <string name="preferences_import_settings_title">Import Settings</string>
    <string name="preferences_import_settings_summary">Import Settings from JSON</string>
    <string name="preferences_registered_hosts_summary">Currently registered: %d</string>
    <string name="preferences_resolution_title">Resolution</string>
    <string name="preferences_fps_title">FPS</string>
    <string name="preferences_bitrate_title">Bitrate</string>
    <string name="preferences_codec_title">Codec</string>
    <string name="preferences_log_verbose_title">Verbose Logging</string>
    <string name="preferences_log_verbose_summary">Warning: This logs a LOT! Don\'t enable for regular use.</string>
    <string name="preferences_resolution_title_360p">360p</string>
    <string name="preferences_resolution_title_540p">540p</string>
    <string name="preferences_resolution_title_720p">720p</string>
    <string name="preferences_resolution_title_1080p">1080p</string>
    <string name="preferences_fps_title_30">30</string>
    <string name="preferences_fps_title_60">60</string>
    <string name="preferences_bitrate_auto">Auto (%d)</string>
    <string name="preferences_codec_title_h264">H264</string>
    <string name="preferences_codec_title_h265">H265 (PS5 only)</string>
    <string name="preferences_swap_cross_moon_title">Swap Cross/Moon and Box/Pyramid Buttons</string>
    <string name="preferences_swap_cross_moon_summary">Swap face buttons if default mapping is incorrect (e.g. for 8BitDo controllers)</string>
    <string name="preferences_rumble_enabled_title">Rumble</string>
    <string name="preferences_rumble_enabled_summary">Use phone vibration motor for rumble</string>
    <string name="preferences_motion_enabled_title">Motion</string>
    <string name="preferences_motion_enabled_summary">Use device\'s motion sensors for controller motion</string>
    <string name="preferences_button_haptic_enabled_title">Touch Haptics</string>
    <string name="preferences_button_haptic_enabled_summary">Use phone vibration motor for short haptic feedback on button touches</string>
    
    <!-- Controller Mapping -->
    <string name="preferences_controller_mapping_title">Controller Mapping</string>
    <string name="preferences_controller_mapping_summary">Remap controller buttons for PS4/PS5 streaming</string>
    <string name="preferences_controller_mapping_category_face_buttons">Face Buttons</string>
    <string name="preferences_controller_mapping_category_shoulder_buttons">Shoulder Buttons</string>
    <string name="preferences_controller_mapping_category_stick_buttons">Stick Buttons</string>
    <string name="preferences_controller_mapping_category_system_buttons">System Buttons</string>
    <string name="preferences_controller_mapping_category_actions">Actions</string>
    <string name="preferences_button_cross_title">Cross (✕)</string>
    <string name="preferences_button_moon_title">Circle (◯)</string>
    <string name="preferences_button_box_title">Square (□)</string>
    <string name="preferences_button_pyramid_title">Triangle (△)</string>
    <string name="preferences_button_l1_title">L1</string>
    <string name="preferences_button_r1_title">R1</string>
    <string name="preferences_button_l2_title">L2</string>
    <string name="preferences_button_r2_title">R2</string>
    <string name="preferences_button_l3_title">L3</string>
    <string name="preferences_button_r3_title">R3</string>
    <string name="preferences_button_options_title">Options</string>
    <string name="preferences_button_share_title">Share/Create</string>
    <string name="preferences_button_ps_title">PS Button</string>
    <string name="preferences_button_touchpad_title">Touchpad Click</string>
    <string name="preferences_button_mapping_dialog_title">Map %s Button</string>
    <string name="preferences_button_mapping_dialog_message">Press any button on your controller to map it</string>
    <string name="preferences_button_mapping_none">Not mapped</string>
    <string name="preferences_button_mapping_clear">Clear</string>
    <string name="preferences_reset_mappings_title">Reset to Defaults</string>
    <string name="preferences_reset_mappings_summary">Restore default controller button mappings</string>
    <string name="preferences_reset_mappings_confirm_title">Reset Mappings?</string>
    <string name="preferences_reset_mappings_confirm_message">This will restore all controller button mappings to their default values.</string>
    <string name="action_reset">Reset</string>
    <string name="action_cancel">Cancel</string>
    
    <string name="alert_message_delete_registered_host">Are you sure you want to delete the registered console %s with ID %s?</string>
    <string name="alert_message_delete_manual_host">Are you sure you want to delete the console entry for %s?</string>
    <string name="action_keep">Keep</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="session_logs_empty_info">No Session Logs recorded.</string>
    <string name="registered_hosts_empty_info">No Consoles registered.</string>
    <string name="display_hosts_empty_discovery_off_info">No consoles added yet.\nEnable Discovery to automatically find consoles on your local network.</string>
    <string name="display_hosts_empty_discovery_on_info">No consoles added or discovered.</string>

    <!-- Don't localize these -->
    <string name="preferences_discovery_enabled_key">discovery_enabled</string>
    <string name="preferences_on_screen_controls_enabled_key">on_screen_controls_enabled</string>
    <string name="preferences_touchpad_only_enabled_key">touchpad_only_enabled</string>
    <string name="preferences_rumble_enabled_key">rumble_enabled</string>
    <string name="preferences_motion_enabled_key">motion_enabled</string>
    <string name="preferences_button_haptic_enabled_key">button_haptic_enabled</string>
    <string name="preferences_log_verbose_key">log_verbose</string>
    <string name="preferences_import_settings_key">import_settings</string>
    <string name="preferences_export_settings_key">export_settings</string>
    <string name="preferences_swap_cross_moon_key">swap_cross_moon</string>
    <string name="preferences_resolution_key">stream_resolution</string>
    <string name="preferences_fps_key">stream_fps</string>
    <string name="preferences_bitrate_key">stream_bitrate</string>
    <string name="preferences_codec_key">stream_codec</string>
</resources>
